--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <div class="col-lg-6">
                         <div class="row g-3 mb-4">
                             <div class="col-6 text-start">
-                            <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.1s" src="img/2.png" />
+                            <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.1s" src="img/2.jpg" />
                             </div>
                             <div class="col-6 text-start">
                             <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.3s" src="img/3.jpg" style="margin-top: 25%" />
