fixed audio, foto, dan artikel

--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
                         </div>
                         <div class="col-lg-6">
 
-                        <h1 class="mb-4">Agam Inong Ceudah</h1>
+                        <h1 class="mb-4">Agam Inong Aceh Selatan Ceudah</h1>
                         <p class="mb-4">
                             Agam Inong Aceh Selatan Meluncurkan inovasi berupa Barcode yang dapat diakses menggunakan smartphone yang memuat story dari objek wisata yang ada di Aceh Selatan. untuk upaya awalnya Agam Inong Aceh Selatan akan mengenalkan objek wisata Guha Bate Meucanang dan Desa Wisata Lhok Rukam. 
-Uniknya barcode ini dapat di akses dalam 2 bentuk yaitu Narasi dan Audio. Penyajian dalam bentuk audio ini ditujukan untuk teman-teman Istimewa (Disabilitas/ Tunanetra), Selain itu denah dari objek wisata tersebut juga dimuat di laman ini. Program ini diharapkan dapat membantu masyarakat penyangdang disabilitas dan bertujuan utk pariwisata berkelanjutan.
+                            Uniknya barcode ini dapat di akses dalam 2 bentuk yaitu Narasi dan Audio. Penyajian dalam bentuk audio ini ditujukan untuk teman-teman Istimewa (Disabilitas/ Tunanetra), Selain itu denah dari objek wisata tersebut juga dimuat di laman ini. Program ini diharapkan dapat membantu masyarakat penyangdang disabilitas dan bertujuan untuk pariwisata berkelanjutan.
                         </p>
                         
                     </div>
@@ -94,7 +94,7 @@ Uniknya barcode ini dapat di akses dalam 2 bentuk yaitu Narasi dan Audio. Penyaj
                 <div class="row">
                     <div class="col-md-6 img-cols">
                         <div class="img-col">
-                            <img class="img-fluid" src="img/about/1.jpg">
+                            <img class="img-fluid" src="img/about/guha1.jpg">
                         </div>
                     </div>
                     <div class="col-md-6 content-cols">
@@ -114,7 +114,7 @@ Uniknya barcode ini dapat di akses dalam 2 bentuk yaitu Narasi dan Audio. Penyaj
                 <div class="row">
                     <div class="col-md-6 img-cols d-block d-md-none">
                         <div class="img-col">
-                            <img class="img-fluid" src="img/about/about-2.jpg">
+                            <img class="img-fluid" src="img/about/jus1.jpg">
                         </div>
                     </div>
                     <div class="col-md-6 content-cols">
@@ -130,7 +130,7 @@ Uniknya barcode ini dapat di akses dalam 2 bentuk yaitu Narasi dan Audio. Penyaj
                     </div>
                     <div class="col-md-6 img-cols d-none d-md-block">
                         <div class="img-col">
-                            <img class="img-fluid" src="img/about/about-2.jpg">
+                            <img class="img-fluid" src="img/about/jus1.jpg">
                         </div>
                     </div>
                 </div>
