--- a/jus-nipah.html
+++ b/jus-nipah.html
@@ -37,21 +37,27 @@
                 <div class="row">
                     <div class="col-md-6 img-cols">
                         <div class="img-col">
-                            <img class="" src="img/about/about-1.jpg">
+                            <img class="" src="img/about/jus2.jpg">
                         </div>
                     </div>
                     <div class="col-md-6 content-cols">
                         <div class="content-col">
                             <h3>Sensasi Jus Nipah Di Gampong Lhok Rukam</h3>
                             <p>
-                                Aceh Selatan tidak hanya terkenal dengan pesona alamnya yang begitu indah, tapi juga beragam kuliner yang lezat serta berkhasiat untuk kesehatan. Seperti salah satunya, minuman olahan tradisional jus nipah yang bisa Anda coba. Selain enak, dan segar teryata jus nipah dapat mencegah kemunculan sel kanker, diabetes dan penyakit ginjal.
+                                Aceh Selatan tidak hanya terkenal dengan pesona alamnya yang begitu indah, tapi juga beragam kuliner yang lezat serta berkhasiat untuk kesehatan. Seperti salah satunya, minuman olahan tradisional Jus Nipah yang bisa Anda coba. Selain enak dan segar ternyata jus nipah dapat mencegah kemunculan sel kanker, diabetes dan penyakit ginjal.
+
                                 Ya, menikmati jus nipah di pinggiran pantai Desa Lhok Rukam, Aceh Selatan memiliki sensasi tersendiri. Jus kaya manfaat yang selalu dincar masyarakat ini juga masuk 10 nominasi terbaik minuman tradisonal dalam Anugrah Pesona Indonesia Tahun 2023.
-                                Cara pembuatannya pun cukup sederhana, biji buah nipah yang sudah dikupas diblender hingga halus dicampur dengan es batu. Kemudian ditambah sirup merah dan susu untuk menambah cita rasa dan kesegaran.
-                                Selain punya citra rasa yang segar dan nikmat ternyata minuman jus yang satu ini kaya akan manfaat karena di dalam buah nipah mengandung tinggi antioksidan. Sehingga jus nipah memiliki manfaat bagi kesehatan tubuh salah satunya untuk mencegah kemunculan sel kanker, diabetes dan penyakit ginjal. Menurut Ozi Yumanza, Pemilik Cafe Jambua Kanyang di objek wisata Desa Lhok Rukam, minuman jus ini sangat diburu pengunjung karena selain menyegarkan juga kaya akan manfaat bagi kesehatan tubuh.  Untuk menikmati segarnya jus ini, Anda tidak perlu morogoh kocek terlalu dalam, jus nipah original ini hanya dihargai Rp12 ribu. Sementara jus panik alias pala nipah nikmat hanya Rp15 ribu saja. Selain menikmati segarnya jus nipah, di sini Anda juga biasa menikmati panorama alamnya yang indah, serta udaranya yang sejuk dan deburan ombak kecil sambil berswafoto.
+                                Cara pembuatannya pun cukup sederhana, biji buah nipah yang sudah dikupas, diblender hingga halus dan dicampur dengan es batu. Kemudian ditambah sirup merah dan susu untuk menambah cita rasa dan kesegaran.
+
+                                Selain punya citra rasa yang segar dan nikmat ternyata minuman jus yang satu ini kaya akan manfaat karena di dalam buah nipah mengandung tinggi antioksidan. Sehingga jus nipah memiliki manfaat bagi kesehatan tubuh salah satunya untuk mencegah kemunculan sel kanker, diabetes dan penyakit ginjal. 
+
+                                Minuman jus ini sangat diburu pengunjung karena selain menyegarkan juga kaya akan manfaat bagi kesehatan tubuh.  Untuk menikmati segarnya jus ini, Anda tidak perlu mengeluarkan banyak uang, jus nipah original ini hanya dihargai Rp12 ribu. Sementara jus panik alias pala nipah nikmat hanya Rp15 ribu saja. Selain menikmati segarnya jus nipah, di sini Anda juga biasa menikmati panorama alamnya yang indah, serta udaranya yang sejuk dan deburan ombak kecil sambil berswafoto.
+
+                                Jus nipah sangat ikonik di Aceh Selatan, Sehingga membawa nya masuk ke dalam nominasi Minuman Tradisional Pada ajang API AWARDS 2023, Dan kami dari Ikatan Agam Inong Aceh Selatan sangat mendukung perkembangan sensasi Kuliner Jus Nipah ini.
                             </p>
                             <div class="col-md-6">
                                 <audio controls>
-                                  <source src="guha-tes.mp3" type="audio/mpeg">
+                                  <source src="audio/jus.mpeg" type="audio/mpeg">
                                   Your browser does not support the audio element.
                                 </audio>
                               </div>
