--- a/guha.html
+++ b/guha.html
@@ -51,7 +51,7 @@
                             </p>
                             <div class="col-md-6">
                                 <audio controls>
-                                  <source src="audio/guha.mpeg" type="audio/mpeg">
+                                  <source src="audio/guha.mp3" type="audio/mpeg">
                                   Your browser does not support the audio element.
                                 </audio>
                               </div>
