--- a/jus-nipah.html
+++ b/jus-nipah.html
@@ -57,7 +57,7 @@
                             </p>
                             <div class="col-md-6">
                                 <audio controls>
-                                  <source src="audio/jus.mpeg" type="audio/mpeg">
+                                  <source src="audio/jus.mp3" type="audio/mpeg">
                                   Your browser does not support the audio element.
                                 </audio>
                               </div>
